# alteris-backend

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
scripts/: test_gemini_async.py  test_label_correction.py  test_synthesis_variants.py  test_triage_dryrun.py
src/alteris/: agent_runtime.py  agent_store.py  annotate.py  beliefs.py  briefing.py  claims_stage1.py  cli.py  constants.py  context.py  cross_source.py  dedup.py  extract.py  graph_ls.py  linker.py  mcp_server.py  models.py  oracle.py  person_model.py  prefilter.py  profile.py  propagate.py  resolver.py  sandwich.py  score.py  spend.py  store.py  topic_normalize.py  triage.py  watcher.py
src/alteris/adapters/: __init__.py  calendar.py  calls.py  (+11 more)
src/loom/: agent_runtime.py  agent_store.py  annotate.py  beliefs.py  briefing.py  claims_stage1.py  cli.py  confidence.py  constants.py  context.py  cross_source.py  dedup.py  extract.py  graph_ls.py  linker.py  mcp_server.py  models.py  oracle.py  person_model.py  prefilter.py  privacy.py  profile.py  propagate.py  resolver.py  sandwich.py  score.py  spend.py  store.py  topic_normalize.py  triage.py  watcher.py
tests/: conftest.py  test_adapters.py  test_ambient_adapters.py  test_annotate.py  test_beliefs.py  test_briefing.py  test_claims_stage1.py  test_cq_v2.py  test_cross_source.py  test_extract.py  test_linker.py  test_llm.py  test_mcp_agents.py  test_models.py  test_onboarding.py  test_prefilter.py  test_privacy.py  test_profile.py  test_propagate.py  test_resolver.py  test_sandwich.py  test_score.py  test_store.py  test_triage.py  test_watcher.py
(+95 files in other folders)
