[project]
name = "loom"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0",
    "requests>=2.31",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "google-genai>=1.0",
    "slack-sdk>=3.0",
    "mcp>=1.0",
    "anthropic>=0.40",
    "starlette>=0.36",
    "uvicorn>=0.27",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
